Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,95 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Alonso: 'Vô địch Bundesliga bất bại khó hơn thắng ngược Bayern'",
+    "content": "HLV Xabi Alonso của Bayer Leverkusen tin rằng việc đội bóng của ông có thể lật ngược tình thế sau khi thua Bayern Munich 0-3 ở lượt đi vòng 1/8 Champions League là khả thi. Ông nhấn mạnh rằng việc vô địch Bundesliga với thành tích bất bại đã chứng minh sức mạnh của đội. Alonso cũng chia sẻ rằng đội cần phải ghi bàn sớm để tạo động lực, mặc dù họ sẽ thiếu vắng nhạc trưởng Florian Wirtz vì chấn thương. Ông khẳng định rằng bóng đá luôn có chỗ cho bất ngờ và đội vẫn còn nhiều cầu thủ chất lượng để thi đấu.",
+    "link": "https://vnexpress.net/alonso-vo-dich-bundesliga-bat-bai-kho-hon-thang-nguoc-bayern-4859374.html",
+    "cat": "the-thao",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Xabi Alonso nghĩ điều gì là khó khăn hơn khi so với việc lật ngược tình thế trước Bayern?",
+    "answers": [
+      {
+        "text": "Vô địch Bundesliga bất bại",
+        "correct": true
+      },
+      {
+        "text": "Thua Bayern 0-3",
+        "correct": false
+      },
+      {
+        "text": "Ghi bàn sớm",
+        "correct": false
+      },
+      {
+        "text": "Chấn thương của Wirtz",
+        "correct": false
+      },
+      {
+        "text": "Có nhiều cầu thủ chất lượng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nữ triệu phú Philippines gây sốt khi xuất hiện quyền lực tại Pháp",
+    "content": "Nữ triệu phú Philippines, Heart Evangelista, đã thu hút sự chú ý khi xuất hiện tại show Kenzo ở Paris với phong cách thời trang ấn tượng. Cô diện bộ suit quá khổ màu xám và túi Furoshiki, kết hợp giữa phong cách nam tính và nét nữ tính. Sự kiện này không chỉ đánh dấu sự trở lại của Kenzo mà còn thể hiện tinh thần sáng tạo và phong cách punk nổi loạn trong bộ sưu tập mới.",
+    "link": "https://dantri.com.vn/giai-tri/nu-trieu-phu-philippines-gay-sot-khi-xuat-hien-quyen-luc-tai-phap-20250310190443148.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Heart Evangelista đã xuất hiện tại sự kiện nào ở Paris?",
+    "answers": [
+      {
+        "text": "Show Kenzo",
+        "correct": true
+      },
+      {
+        "text": "Lễ hội thời trang Paris",
+        "correct": false
+      },
+      {
+        "text": "Buổi tiệc từ thiện",
+        "correct": false
+      },
+      {
+        "text": "Triển lãm nghệ thuật",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tỷ phú Elon Musk chỉ cách vui vẻ, tự tin học tập dù AI phát triển bùng nổ",
+    "content": "Tỷ phú Elon Musk gần đây đã chia sẻ hai lời khuyên cho những người trẻ trong bối cảnh trí tuệ nhân tạo (AI) phát triển mạnh mẽ, có khả năng thay thế nhiều công việc. Ông khuyến khích giới trẻ nên theo đuổi đam mê và trở nên hữu ích cho cộng đồng. Musk cũng nhấn mạnh tầm quan trọng của nỗ lực lao động để thích ứng với sự thay đổi do AI mang lại, đồng thời khuyến khích mọi người không nên nản lòng trước sự cạnh tranh từ công nghệ.",
+    "link": "https://dantri.com.vn/giao-duc/ty-phu-elon-musk-chi-cach-vui-ve-tu-tin-hoc-tap-du-ai-phat-trien-bung-no-20250310160338475.htm",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Elon Musk đã đưa ra những lời khuyên gì cho giới trẻ trong bối cảnh AI phát triển?",
+    "answers": [
+      {
+        "text": "Theo đuổi đam mê và trở nên hữu ích cho cộng đồng",
+        "correct": true
+      },
+      {
+        "text": "Nên từ bỏ ước mơ và tìm một công việc ổn định",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần làm việc ít hơn 6 tiếng mỗi ngày",
+        "correct": false
+      },
+      {
+        "text": "Tập trung vào việc học các công nghệ mới",
+        "correct": false
+      },
+      {
+        "text": "Không cần lo lắng về sự phát triển của AI",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người trẻ chọn sếp",
     "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
     "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
@@ -3664,37 +3753,6 @@
     ]
   },
   {
-    "title": "BMW tung ưu đãi mới cho sedan 3 series",
-    "content": "BMW vừa công bố chương trình ưu đãi cho mẫu sedan 3 series, trong đó khách hàng mua xe trả góp sẽ nhận lãi suất 0% trong 12 tháng đầu với khoản vay lên đến 70% giá trị xe. Chương trình này được áp dụng từ tháng 3 năm 2025, nhằm khuyến khích tiêu thụ trong bối cảnh thị trường ôtô đang phục hồi. Ngoài ra, khách hàng còn được hưởng dịch vụ hậu mãi hấp dẫn như bảo hành 5 năm không giới hạn km và cơ hội tham gia bốc thăm chuyến du lịch châu Âu.",
-    "link": "https://vnexpress.net/bmw-tung-uu-dai-moi-cho-sedan-3-series-4858930.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Chương trình ưu đãi nào mà BMW dành cho sedan 3 series?",
-    "answers": [
-      {
-        "text": "Hỗ trợ lãi suất 0% trong 12 tháng",
-        "correct": true
-      },
-      {
-        "text": "Giảm giá trực tiếp cho xe",
-        "correct": false
-      },
-      {
-        "text": "Tặng kèm phụ kiện xe",
-        "correct": false
-      },
-      {
-        "text": "Miễn phí bảo dưỡng trọn đời",
-        "correct": false
-      },
-      {
-        "text": "Tặng vé xem phim cho khách hàng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bé chậm tăng cân do lỗ thông liên nhĩ",
     "content": "Minh Anh, 2 tuổi, bị thông liên nhĩ lớn dẫn đến chậm tăng cân và thường xuyên viêm đường hô hấp. Sau khi theo dõi và điều trị dinh dưỡng, bé đã đủ điều kiện để can thiệp đóng lỗ thông. Bác sĩ thực hiện thủ thuật xâm lấn tối thiểu để bít lỗ thông liên nhĩ mà không gây tổn thương. Sau can thiệp, sức khỏe của Minh Anh cải thiện rõ rệt, không còn viêm hô hấp và tăng cân tốt hơn.",
     "link": "https://vnexpress.net/be-cham-tang-can-do-lo-thong-lien-nhi-4858895.html",
@@ -3721,6 +3779,37 @@
       },
       {
         "text": "Viêm phổi",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "BMW tung ưu đãi mới cho sedan 3 series",
+    "content": "BMW vừa công bố chương trình ưu đãi cho mẫu sedan 3 series, trong đó khách hàng mua xe trả góp sẽ nhận lãi suất 0% trong 12 tháng đầu với khoản vay lên đến 70% giá trị xe. Chương trình này được áp dụng từ tháng 3 năm 2025, nhằm khuyến khích tiêu thụ trong bối cảnh thị trường ôtô đang phục hồi. Ngoài ra, khách hàng còn được hưởng dịch vụ hậu mãi hấp dẫn như bảo hành 5 năm không giới hạn km và cơ hội tham gia bốc thăm chuyến du lịch châu Âu.",
+    "link": "https://vnexpress.net/bmw-tung-uu-dai-moi-cho-sedan-3-series-4858930.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chương trình ưu đãi nào mà BMW dành cho sedan 3 series?",
+    "answers": [
+      {
+        "text": "Hỗ trợ lãi suất 0% trong 12 tháng",
+        "correct": true
+      },
+      {
+        "text": "Giảm giá trực tiếp cho xe",
+        "correct": false
+      },
+      {
+        "text": "Tặng kèm phụ kiện xe",
+        "correct": false
+      },
+      {
+        "text": "Miễn phí bảo dưỡng trọn đời",
+        "correct": false
+      },
+      {
+        "text": "Tặng vé xem phim cho khách hàng",
         "correct": false
       }
     ]
@@ -4356,6 +4445,33 @@
     ]
   },
   {
+    "title": "Biến chứng tiểu đường gây mờ mắt",
+    "content": "Bài viết mô tả trường hợp của anh Hùng, 32 tuổi, bị mờ mắt do biến chứng võng mạc tiểu đường. Anh Hùng mắc bệnh tiểu đường type 2 và đã được bác sĩ chẩn đoán mắc bệnh võng mạc do lượng đường trong máu cao. Sau khi điều trị ổn định đường huyết, anh Hùng đã trải qua phẫu thuật bong võng mạc để ngăn ngừa nguy cơ mù lòa. Bài viết nhấn mạnh tầm quan trọng của việc khám mắt định kỳ cho người bệnh tiểu đường để phát hiện sớm các biến chứng.",
+    "link": "https://vnexpress.net/bien-chung-tieu-duong-gay-mo-mat-4858843.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Biến chứng tiểu đường nào gây mờ mắt?",
+    "answers": [
+      {
+        "text": "Bệnh võng mạc tiểu đường",
+        "correct": true
+      },
+      {
+        "text": "Bệnh tiểu đường type 1",
+        "correct": false
+      },
+      {
+        "text": "Bệnh tăng huyết áp",
+        "correct": false
+      },
+      {
+        "text": "Bệnh glôcôm",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Uống sữa có làm tăng cholesterol?",
     "content": "Bài viết thảo luận về việc uống sữa và tác động của nó đến mức cholesterol trong cơ thể. Sữa là nguồn dinh dưỡng phong phú, cung cấp nhiều vitamin và khoáng chất, nhưng những người có cholesterol cao cần lựa chọn loại sữa phù hợp để tránh làm tăng chỉ số cholesterol. Việc chọn đúng loại sữa là rất quan trọng để duy trì sức khỏe tim mạch.",
     "link": "https://vnexpress.net/uong-sua-co-lam-tang-cholesterol-4858799.html",
@@ -4405,33 +4521,6 @@
       },
       {
         "text": "Chỉ nên đầu tư vào bất động sản ngay lập tức.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Biến chứng tiểu đường gây mờ mắt",
-    "content": "Bài viết mô tả trường hợp của anh Hùng, 32 tuổi, bị mờ mắt do biến chứng võng mạc tiểu đường. Anh Hùng mắc bệnh tiểu đường type 2 và đã được bác sĩ chẩn đoán mắc bệnh võng mạc do lượng đường trong máu cao. Sau khi điều trị ổn định đường huyết, anh Hùng đã trải qua phẫu thuật bong võng mạc để ngăn ngừa nguy cơ mù lòa. Bài viết nhấn mạnh tầm quan trọng của việc khám mắt định kỳ cho người bệnh tiểu đường để phát hiện sớm các biến chứng.",
-    "link": "https://vnexpress.net/bien-chung-tieu-duong-gay-mo-mat-4858843.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Biến chứng tiểu đường nào gây mờ mắt?",
-    "answers": [
-      {
-        "text": "Bệnh võng mạc tiểu đường",
-        "correct": true
-      },
-      {
-        "text": "Bệnh tiểu đường type 1",
-        "correct": false
-      },
-      {
-        "text": "Bệnh tăng huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Bệnh glôcôm",
         "correct": false
       }
     ]
@@ -4544,60 +4633,6 @@
       },
       {
         "text": "Chuyển ra sống riêng ngay lập tức.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Từ nô lệ đến AI, vì sao AI khác biệt?",
-    "content": "Bài viết khám phá sự phát triển của trí tuệ nhân tạo (AI) và những thách thức, cơ hội mà nó mang lại cho người lao động. Từ thời kỳ nô lệ ở La Mã đến các cuộc cách mạng công nghiệp, con người đã phải thích nghi với những thay đổi công nghệ. AI không chỉ thay thế công việc chân tay mà còn ảnh hưởng đến những nghề nghiệp đòi hỏi tư duy, sáng tạo. Điều quan trọng là người lao động cần học cách hợp tác với AI và phát triển các kỹ năng mềm để duy trì vị trí trong thị trường lao động tương lai.",
-    "link": "https://tuoitre.vn/tu-no-le-den-ai-vi-sao-ai-khac-biet-20250309222641927.htm",
-    "cat": "cong-nghe",
-    "positivity": 7,
-    "importance": 9,
-    "question": "AI đang tạo ra những thay đổi gì trong thị trường lao động?",
-    "answers": [
-      {
-        "text": "AI đang thay thế nhiều công việc và tạo ra cơ hội mới cho người lao động.",
-        "correct": true
-      },
-      {
-        "text": "AI chỉ thay thế các công việc chân tay mà không ảnh hưởng đến công việc khác.",
-        "correct": false
-      },
-      {
-        "text": "AI không có tác động gì đến thị trường lao động.",
-        "correct": false
-      },
-      {
-        "text": "AI chỉ giúp tăng năng suất mà không thay đổi cách làm việc.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tỷ phú Musk cảnh báo tiền tuyến Ukraine sụp đổ, Mỹ và Ba Lan \"đấu khẩu\"",
-    "content": "Elon Musk cảnh báo rằng tiền tuyến Ukraine sẽ sụp đổ nếu SpaceX ngừng cung cấp dịch vụ Starlink. Ngoại trưởng Ba Lan, Radosław Sikorski, đã phản bác rằng Ba Lan đang chi trả cho dịch vụ này và nhấn mạnh rằng nếu SpaceX không đáng tin cậy, họ sẽ tìm kiếm nhà cung cấp khác. Mỹ cũng đã tham gia tranh cãi khi Ngoại trưởng Marco Rubio chỉ trích Sikorski và nhấn mạnh tầm quan trọng của Starlink trong cuộc chiến của Ukraine.",
-    "link": "https://dantri.com.vn/the-gioi/ty-phu-musk-canh-bao-tien-tuyen-ukraine-sup-do-my-va-ba-lan-dau-khau-20250310053441549.htm",
-    "cat": "the-gioi",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Tại sao Elon Musk nói rằng tiền tuyến Ukraine sẽ sụp đổ?",
-    "answers": [
-      {
-        "text": "Nếu SpaceX ngừng cung cấp dịch vụ Starlink.",
-        "correct": true
-      },
-      {
-        "text": "Vì Ukraine không có đủ quân lính.",
-        "correct": false
-      },
-      {
-        "text": "Do Nga tấn công mạnh mẽ hơn.",
-        "correct": false
-      },
-      {
-        "text": "Vì Mỹ không hỗ trợ Ukraine.",
         "correct": false
       }
     ]
